# onthedesk

./: .gitignore  CLAUDE.md  README.md
.superpowers/brainstorm/272-1780114976/content/: architecture.html  behavior-nurture.html  character-animation.html  character-colors.html  desktop-interaction.html  official-design.html
.superpowers/brainstorm/272-1780114976/state/: server-stopped
clawd/: index.html  package-lock.json  package.json  tsconfig.json
clawd/src/: main.ts  vite-env.d.ts
clawd/src-tauri/: Cargo.toml  tauri.conf.json
clawd/src-tauri/capabilities/: default.json
clawd/src-tauri/src/: commands.rs  main.rs
clawd/src/actors/: Clawd.ts
clawd/src/core/: BehaviorTree.ts  SpriteEngine.ts  StateMachine.ts
clawd/src/data/: crab-pixels.json  dialogs.json  whale-pixels.json
clawd/src/systems/: ContextMenu.ts  DialogSystem.ts  InteractionSystem.ts  MovementSystem.ts  NurtureSystem.ts  StorageSystem.ts  TauriBridge.ts
clawd/src/ui/: SettingsPanel.ts
clawd/src/utils/: EventBus.ts  Palette.ts
clawd/tools/: fix-expr.cjs  fix-switch.cjs  force-clawd.cjs  patch-theme.cjs
docs/superpowers/specs/: 2026-05-30-claude-desk-pet-design.md
